# gravity

./: .clang-format  .dockerignore  .gitattributes  .gitignore  AddToZip.vbs  BuildGravityVS.bat  BuildGravityVS2010-64bit.bat  BuildGravityVS2010.bat  BuildGravityVS64bit.bat  BuildGravityVSCommon.bat  BuildGravityVSDebug.bat  BuildVSGravity.bat  CMakeLists.txt  Cargo.toml  Dockerfile.bionic  Dockerfile.focal  Dockerfile.jammy  Gravity_Setup_for_new_VM.txt  INSTALL.txt  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  buildARM.sh  buildGravity.sh  config.h.in  configDeps.bat  configure  configure.ac  csb.sh  err.txt  gravity_env.config
py-protobuf/: .gitignore  CMakeLists.txt  py-protobufs-setup.bat.in  py-protobufs-setup.sh.in
src/: CMakeLists.txt
src/api/: buildall.sh
src/api/DotNet/: AssemblyInfo.cpp  GravityCS.vcxproj  GravityCS.vcxproj.filters  GravityInteractor.cpp  GravityInteractor.h  GravityInterop.sln  README.md  Stdafx.cpp  Stdafx.h
src/api/MATLAB/: CMakeLists.txt  GravityDataProduct.m  GravityNode.m  GravitySubscription.m  LICENSE-2.0.txt  MATLABGravityNode.java  MATLABGravitySubscriber.java  MATLABProtobufGenerator.java  Makefile  Makefile.in  Protobuf.m  ServiceDirectoryDomainUpdate.m  nmake.mak
src/api/cpp/: .cproject  .project  CMakeLists.txt  CommUtil.cpp  CommUtil.h  DomainDataKey.cpp  DomainDataKey.h  FutureResponse.cpp  FutureResponse.h  GravityConfigParser.cpp  GravityConfigParser.h  GravityDataProduct.cpp  GravityDataProduct.h  GravityHeartbeat.cpp  GravityHeartbeat.h  GravityHeartbeatListener.h  GravityLogger.cpp  GravityLogger.h  GravityMetrics.cpp  GravityMetrics.h  GravityMetricsManager.cpp  GravityMetricsManager.h  GravityMetricsUtil.cpp  GravityMetricsUtil.h  GravityNode.cpp  GravityNode.h  GravityPublishManager.cpp  GravityPublishManager.h  GravityRequestManager.cpp  GravityRequestManager.h  GravityRequestor.cpp  GravityRequestor.h  GravitySemaphore.h  GravityServiceManager.cpp  GravityServiceManager.h  GravityServiceProvider.cpp  GravityServiceProvider.h  GravitySpdLogConfigSubscriber.cpp  GravitySpdLogConfigSubscriber.h  GravitySubscriber.cpp  (+16 more)
src/api/java/: .classpath  .gitignore  .project  CMakeLists.txt  CPPGravitySubscriber.cpp  CPPGravitySubscriber.h  GravityJavaTest.java  GravitySubscriber.java  JavaTest.out  Makefile  Makefile.in  cpp_makefile  cpp_makefile.in  gravity.i  gravitynode.i  java_makefile  java_makefile.in  logger.i  makefile.vs  modulecode.i  nmake.mak
src/api/protobufs/: CMakeLists.txt  ComponentDataLookupResponsePB.proto  ComponentLookupRequestPB.proto  ComponentServiceLookupResponsePB.proto  ConfigRequest.proto  FileArchiverControlRequest.proto  FileArchiverControlRequestPB.proto  FileArchiverControlResponsePB.proto  GravityConfigParamPB.proto  GravityDataProductPB.proto  GravityLogMessagePB.proto  GravityMetricsDataPB.proto  GravitySpdLogConfigPB.proto  RegisterRelay.proto  ServiceDirectoryBroadcastPB.proto  ServiceDirectoryDomainUpdatePB.proto  ServiceDirectoryMapPB.proto  ServiceDirectoryRegistrationPB.proto  ServiceDirectoryResponsePB.proto  ServiceDirectoryUnregistrationPB.proto  buildProtobufs.sh
src/api/python/: .gitignore  Makefile.in  cpp_makefile.in
src/api/rust/: .gitignore  CMakeLists.txt  Cargo.toml  Gravity.ini  README.md  build.rs  copy.sh  temp.toml  wrapper.h
src/components/cpp/: Makefile.in  buildall.sh
src/keyvalue_parser/: .gitignore  CMakeLists.txt  Makefile  Makefile.in  buildall.sh  keyvalue.l  keyvalue.y  keyvalue_main.c  keyvalue_parser.c  keyvalue_parser.h  params.h  queue.h
test/: CMakeLists.txt  GravityTest.h  GravityTestSuite.h  a2  testall.sh
test/api/cpp/: .gitignore  CMakeLists.txt  Gravity.ini  Makefile  Makefile.in  doctest.h  test.sh.in
test/api/java/: .classpath  .gitignore  .project  CMakeLists.txt  JavaTestPB.proto  Makefile  Makefile.in  test.sh  test.sh.in
test/api/python/: .gitignore  CMakeLists.txt  Makefile.in  PythonTestPB.proto  pytest.py  test.sh.in
test/components/cpp/: Makefile.in  runTestsInDir.sh
test/examples/: .gitignore  CMakeLists.txt
test/examples/1 - BasicDataProduct/: BasicDataProductPublisher.cpp  BasicDataProductSubscriber.cpp  Makefile  run.sh  runPub.sh  runSub.sh
test/examples/1-BasicDataProduct/: .gitignore  BasicDataProductPublisher.cpp  BasicDataProductSubscriber.cpp  CMakeLists.txt  Makefile  Makefile.in  RunBasicDataProductDebug.bat.in  RunBasicDataProductRelease.bat.in  run.sh.cmake  run.sh.in
test/examples/10-Archiving/: .gitignore  ArchiveTest.cpp  CMakeLists.txt  Gravity.ini  Makefile.in  ReplayTest.cpp  run.sh.cmake  run.sh.in
test/examples/11-PythonPubSub/: .gitignore  CMakeLists.txt  Gravity.ini  Makefile.in  pypub.py  pysub.py  run.sh.in
test/examples/12-PythonBasicService/: CMakeLists.txt  Gravity.ini  requestor.py  run.sh.in
test/examples/13-Relay/: .gitignore  CMakeLists.txt  Gravity.ini  Makefile.in  ProtobufDataProductPublisher.cpp  ProtobufDataProductSubscriber.cpp  run.sh.cmake  run.sh.in
test/examples/14-AnomalyDetection/: .gitignore  CMakeLists.txt  DataPoint.proto  Gravity.ini  Readme.md  detect.py  detect.sh.in  gravity_autoencoder.py  pub.py  train.py  train.sh.in
test/examples/15-RustBasicDataProduct/: Cargo.toml  Gravity.ini  build.rs
test/examples/15-SpdlogDynamicConfiguration/: CMakeLists.txt  Gravity.ini  Makefile.in  SpdlogConfigurationPublisherTest.cpp  SpdlogDynamicConfiguration.cpp  run.sh.in
test/examples/16-RustBasicService/: Cargo.toml  build.rs
test/examples/2 - ProtobufDataProduct/: .gitignore  Makefile  ProtobufDataProductPublisher.cpp  ProtobufDataProductSubscriber.cpp  run.sh
test/examples/2-ProtobufDataProduct/: CMakeLists.txt  Makefile  ProtobufDataProductPublisher.cpp  ProtobufDataProductPublisher2.cpp  ProtobufDataProductSubscriber.cpp  ProtobufDataProductSubscriber2.cpp  RunProtobufDataProductDebug.bat.in  RunProtobufDataProductRelease.bat.in  run.sh.cmake  run.sh.in
test/examples/3 - MultipleDataProduct/: .gitignore  Makefile  MultipleDataProductPublisher.cpp  MultipleDataProductSubscriber.cpp  run.sh
test/examples/3-MultipleDataProduct/: Makefile  (+8 more)
(+879 files in other folders)
